# tira

./: AGENTS.md  Cargo.toml  README.md  architecture.md  constitution.md
src/: app.rs  config.rs  keymap.rs  lib.rs  main.rs
src/app/: action.rs  board.rs  command_log.rs  dropdown.rs  effect.rs  event.rs  focus.rs  keys.rs  list.rs  modal.rs  mouse.rs  setup.rs  tab.rs  ticket_dialog.rs  timeline.rs
src/components/: mod.rs
src/components/generic/: avatar.rs  dialog.rs  dropdown.rs  filter.rs  filtered_tree.rs  input.rs  label.rs  mod.rs  notification.rs  priority.rs  scroll_animator.rs  tabs.rs  tree.rs
src/components/jira/: filtered_tree.rs  issue_list.rs  mod.rs  ticket_dialog.rs  work_item_key.rs
src/domain/: date.rs  mod.rs  models.rs
src/services/: clipboard.rs  jira.rs  mod.rs
src/services/jira/: greenhopper.rs  mod.rs  protocol.rs  query.rs
src/tui/: mod.rs  terminal.rs
src/ui/: assignee_selector.rs  board.rs  board_group_picker.rs  chrome.rs  layout.rs  logo.rs  mod.rs  overlays.rs  project_switcher.rs  quick_switcher.rs  scrollbar.rs  selector.rs  setup.rs  style.rs  theme.rs  theme_picker.rs  timeline.rs
src/ui/board/: card.rs  filter.rs  heading.rs  lanes.rs  layout.rs  mod.rs  text.rs  toolbar.rs
tests/: jira_issue_list.rs  keybindings.rs  lazy_loading.rs  list_behavior.rs  mouse.rs  node_reload.rs  overlay_characterization.rs  project_switcher.rs  rendering.rs  setup_config.rs  timeline.rs
tests/support/: mod.rs
