[package]
name = "tira"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
url = "2.5.8"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
